--- a/donate.html
+++ b/donate.html
@@ -383,7 +383,7 @@
 
                   <!-- </form> -->
 
-                  <button class="btn" type="button" onclick="secondNextButton()">Next Step</button>
+                  <button class="btn btn-primary margin-20" type="button" onclick="secondNextButton()">Next Step</button>
 
                 </div>
               </div>
