--- a/donate.html
+++ b/donate.html
@@ -604,23 +604,19 @@
     // --------------first next button----------------
     var amount = 100;
     function firstNextButton() {
-      console.log('first next button')
       if (document.getElementById('amountRadio1').checked) {
         amount = document.getElementById('amountRadio1').value;
-        console.log('radio button value', amount)
       } else if (document.getElementById('amountRadio2').checked) {
         amount = document.getElementById('amountRadio2').value;
       } else if (document.getElementById('amountRadio3').checked) {
         amount = document.getElementById('amountRadio3').value;
       }
 
-      console.log("amount", amount);
 
     }
 
     // -------------second next button-------------
     function secondNextButton() {
-      console.log('second button')
       fname = document.getElementById('fname').value
       lname = document.getElementById('lname').value
       email = document.getElementById('email').value
@@ -673,7 +669,6 @@
         swal({ title: "Enter valid country name!", icon: "warning" });
         return
       }
-      console.log('elsecase', fname, lname, email, addressone, addresstwo, city, state, zipcode, country)
       window.location = "#third"
 
     }
@@ -682,17 +677,13 @@
 
     var paymentType = "Stripe"
     function thirdNextButton() {
-      console.log('third button')
       if (document.getElementById('paymentRadio1').checked) {
         paymentType = document.getElementById('paymentRadio1').value;
-        console.log('radio button value', paymentType)
         modal.style.display = "block";
 
       } else if (document.getElementById('paymentRadio2').checked) {
         paymentType = document.getElementById('paymentRadio2').value;
       }
-      console.log('paymenttype', paymentType)
-      // window.location = "#fourth"
     }
 
 
@@ -719,7 +710,7 @@
 
 
   <script>
-    var stripe = Stripe('pk_test_51H0hOeJ5nSY4c5DA2cfV1Tv6LG1GbKx2wLunxpRedM2MngFTgty1g1tEJQXhwSe28lgDsHcfl0Xy6OiVGvr1sSYs00Ovbdmo9v');
+    var stripe = Stripe('pk_live_51H0hOeJ5nSY4c5DAvFEuc6pmikZ6QUcUTTbbe9duhfYsUCadDTukQRP077ZzOS7GSmJVQWZFskgX4tAQVgJmnGCL00Iw2Cy1Tz');
     var elements = stripe.elements({
       fonts: [
         {
@@ -805,8 +796,7 @@
         "zipcode": zipcode,
         "country": country
       }
-      axios.post('http://localhost:3000/users/onetimepayment', object).then((result) => {
-        console.log('==========', result.data,"=======",result)
+      axios.post('https://payments.peepsx.com/users/onetimepayment', object).then((result) => {
         if (result.data.status == true) {
           window.location = "#fourth"
           document.getElementById("amountdonated").innerHTML = amount;
@@ -827,7 +817,7 @@
   </script>
 
   <script
-    src="https://www.paypal.com/sdk/js?client-id=AeSkIlCgK1bjX6UPr8w9fDyMD7F5WsuzJWWbgiNSyEi2BnU43V6j5kJbRCK87gk6uYi8HfpyYyCKAzK_&vault=true"
+    src="https://www.paypal.com/sdk/js?client-id=Aes7-mZ9lsMi3h-m6lZ-eIQFBaUoF_hpHW1fF8bEZ5a59vZvzeTg75ZZc78g5h5igwkSABHfvlDQk8VQ&vault=true"
     data-sdk-integration-source="button-factory">
     </script>
   <!-- JS Plugins Init. -->
@@ -848,7 +838,6 @@
 
 
       createOrder: function (data, actions) {
-        console.log('=========createorder====', data, actions)
         return actions.order.create({
           purchase_units: [{
             amount: {
@@ -861,7 +850,6 @@
       onApprove: function (data, actions) {
         return actions.order.capture().then(function (details) {
           if (details.status == "COMPLETED") {
-            console.log('=======daetails', details, data, actions)
             window.location = "#fourth"
             document.getElementById("amountdonated").innerHTML = amount;
             document.getElementById("TransectionId").innerHTML = details.id
@@ -881,8 +869,7 @@
               "country": country
 
             }
-            axios.post('http://localhost:3000/users/paypalonetimepayment', object).then((result) => {
-              console.log('onetimepaypalresult', result)
+            axios.post('https://payments.peepsx.com/users/paypalonetimepayment', object).then((result) => {
             }).catch((error) => {
               console.log(error)
             })
@@ -912,36 +899,7 @@
         tagline: false
       },
 
-      // createSubscription: function (data, actions) {
-
-      //     return actions.subscription.create({
-      //         'plan_id': 'P-7MG6534019154735TL4FSIZI'
-      //     });
-      // },
-      // onCancel: function (data) {
-      //     swal({title:"User has cancelled the payment.",icon:'warning'});
-      //     document.getElementById("loading").style.display = "none";
-
-      // },
-      // onApprove: function (data, actions) {
-      //     swal("Your payment is Successful.", `Your SubscriptionId is: ${data.subscriptionID}`, "success");
-
-      //     let object = {
-      //         "orderID": data.orderID,
-      //         "billingToken": data.billingToken,
-      //         "subscriptionID": data.subscriptionID,
-      //         "facilitatorAccessToken": data.facilitatorAccessToken
-      //     }
-
-      //     axios.post('https://payments.peepsx.com/users/paypalpayment', object).then((result) => {
-      //         localStorage.setItem("paypalsubId", data.subscriptionID)
-      //         localStorage.setItem("paypalstatus", "active")
-      //         localStorage.setItem('paymentType', "paypal")
-      //     }).catch((error) => {
-      //         console.log(error)
-      //     })
-
-      // }
+    
     }).render('#paypal-button-container');
   </script>
 
