--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 </section>
 <!-------- HOME BLOCK 6 End--------->
 <!------------------------- SUPPORT DEVELOPMENT BLOCK Start------------------------>
-<section class="pt-md-4 pb-md-0">
+<section class="pt-md-4 pb-md-0" id="support">
   <div class="container">
     <div class="row align-items-center justify-content-around">
       <div class="col-lg-5 col-md-6">
