--- a/join.html
+++ b/join.html
@@ -313,7 +313,7 @@
       </div>
 
  <!-- Modal stripe payment-->
- <div class="modal " id="myModal" role="dialog">
+ <div class="modal join-page-modal" id="myModal" role="dialog">
   <div class="modal-dialog">
 
       <!-- Modal content-->
