commit before pulling

--- a/donate.html
+++ b/donate.html
@@ -810,7 +810,7 @@
         if (result.data.status == true) {
           window.location = "#fourth"
           document.getElementById("amountdonated").innerHTML = amount;
-          document.getElementById("TransectionId").innerHTML = result.data.
+          document.getElementById("TransectionId").innerHTML = result.data
         } else {
           window.location = "#third"
           swal({ title: "Sorry, but your payment has failed. Please try again.", icon: 'warning' });
